Frontend fully implemented

--- a/portfolio/src/app/components/education/education.component.html
+++ b/portfolio/src/app/components/education/education.component.html
@@ -186,7 +186,7 @@
 
   <!-- Show educations -->
   <div class="container-fluid">
-    <div *ngFor="let education of educations" class="row align-items-top">
+    <div *ngFor="let education of educations" class="row align-items-top mb-2">
       <div class="col-1"></div>
       <div class="col-1">
         <img
