--- a/portfolio/src/app/components/experience/experience.component.html
+++ b/portfolio/src/app/components/experience/experience.component.html
@@ -176,7 +176,10 @@
 
   <!-- Show experiences -->
   <div class="container-fluid">
-    <div *ngFor="let experience of experiences" class="row align-items-top">
+    <div
+      *ngFor="let experience of experiences"
+      class="row align-items-top mb-2"
+    >
       <div class="col-1"></div>
       <div class="col-1">
         <img
