--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -143,7 +143,7 @@
   <!-- Show experiences -->
 
   <div class="container-fluid">
-    <div *ngFor="let project of projects" class="row align-items-top">
+    <div *ngFor="let project of projects" class="row align-items-top mb-2">
       <div class="col-1"></div>
       <div class="col-1">
         <img
